--- a/src/EclipseWorks.Api/appsettings.json
+++ b/src/EclipseWorks.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=eclipseworks;Username=eclipseworks;Password=eclipse@works2025;Pooling=true;"
+  }
 }
