--- a/src/EclipseWorks.Api/EclipseWorks.Api.csproj
+++ b/src/EclipseWorks.Api/EclipseWorks.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -12,11 +12,16 @@
     <PackageReference Include="MediatR" Version="12.5.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.15">
+		<PrivateAssets>all</PrivateAssets>
+		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EclipseWorks.Application\EclipseWorks.Application.csproj" />
     <ProjectReference Include="..\EclipseWorks.Domain\EclipseWorks.Domain.csproj" />
+    <ProjectReference Include="..\EclipseWorks.Infrastructure\EclipseWorks.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
