--- a/src/TaskManager.Api/appsettings.json
+++ b/src/TaskManager.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=TaskManager;Username=TaskManager;Password=eclipse@works2025;Pooling=true;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=TaskManager;Username=TaskManager;Password=Task@Manager2025;Pooling=true;"
   }
 }
